...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/safe_point"
        app:layout_constraintVertical_bias="0.5" />


    <ImageView
        android:id="@+id/up_arrow"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:alpha="0.3"
        android:elevation="1000dp"
        android:src="@drawable/up_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:alpha="0.3"
        android:elevation="1000dp"
        android:src="@drawable/right_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:alpha="0.3"
        android:elevation="1000dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
...
